--- a/packages/nevka-eslint/package.json
+++ b/packages/nevka-eslint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-nevka/eslint",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/react-nevka.git",
@@ -12,6 +12,7 @@
     "eslint",
     "eslint-config"
   ],
+  "main": "index.js",
   "files": [
     ".eslintrc.js",
     "index.js"
