--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-nevka/eslint-config",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/react-nevka.git",
@@ -19,7 +19,8 @@
   ],
   "peerDependencies": {
     "eslint": ">= 8",
-    "prettier": ">= 2"
+    "prettier": ">= 2",
+    "typescript": ">= 4"
   },
   "description": "A shareable ESLint configuration which used in @react-nevka packages",
   "dependencies": {
